--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout.cshtml
@@ -4,46 +4,77 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TournamentsWebApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
-    <header>
-        @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">TournamentsWebApp</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+        <header class="header">
+            <nav class="navbar">
+
+                <a class="navbar-brand desktop" asp-page="/LandingPage">
+                    <img src="" alt="logo">
+                </a>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link dropdown-toggle" asp-page="/Home">
+                                Home
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link dropdown-toggle" asp-page="/AvailableTournaments">
+                                Available Tournaments
+                            </a>
                         </li>
+                        @*<li class="nav-item">
+            <a class="nav-link">My profile</a>
+        </li>*@
+
+                        <li class="nav-item">|</li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Register">
+                                Create Account
+                            </a>
+                        </li>
+                        @*@{ if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-page="/Login">Logout</a>
+                                </li>
+                            }
+                            else
+                            {*@
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-page="/Login">Login</a>
+                                </li>
+                            @*}
+
+                        }*@
+
+
                     </ul>
                 </div>
-            </div>
-        </nav>*@
+            </nav>
+        </header>
 
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+   
+    @*<div class="container">
+        <main role="main" class="pb-3">*@
             @RenderBody()
-        </main>
-    </div>
+        @*</main>
+    </div>*@
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - TournamentsWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
