--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Login.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Login.cshtml
@@ -9,6 +9,8 @@
     {
         Layout = "_Layout";
     }
+    ViewData["Title"] = "Login";
+
 }
 @section scripts{
     <partial name="_ValidationScriptsPartial" />
