--- a/TournamentsSynthesis/TournamentsWebApp/Pages/MyProfile.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/MyProfile.cshtml
@@ -2,6 +2,8 @@
 @model TournamentsWebApp.Pages.MyProfileModel
 @{
     Layout = "_Layout1";
+    ViewData["Title"] = "MyProfile";
+
 }
 
 <div class="container-content-info">
