--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Register.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Register.cshtml
@@ -1,4 +1,14 @@
 ﻿@page
 @model TournamentsWebApp.Pages.RegisterModel
 @{
+    if (User.Identity.IsAuthenticated)
+    {
+        Layout = "_Layout1";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
+
+    ViewData["Title"] = "Register";
 }
