--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TournamentsWebApp</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
-    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/lo.css" />
 </head>
 <body>
         <header class="header">
