--- a/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/helo.css
+++ b/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/helo.css
@@ -497,7 +497,7 @@ a {
     margin-bottom: 1em;
 }
 
-    .register-container input {
+    .register-container a {
         background-color: white;
         color: black;
         padding: 14px 20px;
@@ -509,7 +509,7 @@ a {
         border: solid 1px black;
     }
 
-        .register-container input:hover {
+        .register-container a:hover {
             background-color: black;
             color: white;
             opacity: 0.3;
@@ -537,42 +537,42 @@ a {
 
 
 
+/*Sign up form*/
 
-/*Previous*/
 
-/*
-.list-container{
+
+.signup-container {
     display: flex;
     justify-content: center;
 }
-.item-container{
-    display: flex;
-    background-color: aqua;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
-    padding-top: 30px;
-    transition-duration: 0.4s;
-    opacity: 1;
-    transition: 0,3;
-    color: black;
+
+
+
+.signup-info-container h3 {
+    text-align: center;
+    margin-bottom: 10%;
+    font-size: 1.7em;
 }
 
-.item-container img{
-    height: 200px;
-    width: 300px;
-    max-width: 50%;
+.signup-info-container h4 {
+    text-align: center;
 }
 
-.item-content{
-    margin-left: 40px;
+.btn-signup-container {
+    text-align: center;
+    margin-top: 10%;
 }
 
-.item-container:hover{
-    opacity: 0.5; 
+    .btn-signup-container input {
+        padding: 3%;
+        font-size: 1em;
+    }
+
+.border-container {
+    border: 1px solid white;
+    padding: 9%;
 }
-*/
 
-
-
+.message{
+    color: lightgreen;
+}
